--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
   <meta name="keywords" content="Tafeltennis, pingpong, ping-pong, Aalst, Erembodegem, competitie, Vttl, Frenoy, Sporta">
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="shortcut icon" href="favicon.ico" />
+  <link rel="shortcut icon" href="/favicon.ico" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
   <link
     rel="stylesheet"
