--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,16 @@
   <meta name="description" content="Tafeltennis competitie Vttl & Sporta voor de gezelligste caféploeg van Aalst en omstreken" />
   <meta name="keywords" content="Tafeltennis, pingpong, ping-pong, Aalst, Erembodegem, competitie, Vttl, Frenoy, Sporta">
 
+  <meta property="og:type" content="website" />
+  <meta property="og:image" itemprop="image" content="https://ttc-aalst.be/img/logo.png">
+  <meta property="og:site_name" content="yourdomainname.com">
+  <meta property="og:title" content="TTC Aalst">
+  <meta property="og:description" content="Een groeiende tafeltennis club waar fairplay en gezelligheid centraal staan!">
+  <meta property="og:url" content="https://ttc-aalst.be">
+  <meta property="og:image:width" content="500">
+  <meta property="og:image:height" content="378">
+  <meta property="og:image:type" content="image/png">
+
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="shortcut icon" href="/favicon.ico" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
