better meta image

--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,8 @@
   <meta name="keywords" content="Tafeltennis, pingpong, ping-pong, Aalst, Erembodegem, competitie, Vttl, Frenoy, Sporta">
 
   <meta property="og:type" content="website" />
-  <meta property="og:image" itemprop="image" content="https://ttc-aalst.be/img/logo.png">
-  <meta property="og:site_name" content="yourdomainname.com">
+  <meta property="og:image" itemprop="image" content="https://ttc-aalst.be/img/footer.png">
+  <meta property="og:site_name" content="ttc-aalst.be">
   <meta property="og:title" content="TTC Aalst">
   <meta property="og:description" content="Een groeiende tafeltennis club waar fairplay en gezelligheid centraal staan!">
   <meta property="og:url" content="https://ttc-aalst.be">
