--- a/public/tabt-api.html
+++ b/public/tabt-api.html
@@ -2,10 +2,20 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="refresh" content="0; url=https://itenium-test.synology.me:1709">
-  <title>Redirecting...</title>
+  <title>TabTAPI Test Form</title>
+  <style>
+    body, html {
+      height: 100%;
+      margin: 0;
+    }
+    iframe {
+      width: 100%;
+      height: 100%;
+      border: none;
+    }
+  </style>
 </head>
 <body>
-  <p>If you are not redirected automatically, <a href="https://itenium-test.synology.me:1709">click here</a>.</p>
+  <iframe src="https://itenium-test.synology.me:1709"></iframe>
 </body>
 </html>
